test/negative/dynamic_field_assignop/Main.hx
class Main {
	static function main():Void {
		var state:Dynamic = {count: 1};
		state.count += 2;
	}
}
